Update html tags and add some css to landing page

--- a/index.html
+++ b/index.html
@@ -3,27 +3,32 @@
 <head>
     <title>Everseed</title>
     <meta charset="utf-8">
-    <link a href="">
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Poppins" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" type="text/css" href="styles/normalize.css">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
 
 </head>
 <body class="landing">
     <header class="topnav container">
-        <a href="index.html" class="logo column third"><img src="assests/logo/logo-white.png" alt="everseed logo"></a>
         <nav class="navbar column third">
             <ul>
+                <li><a href="index.html" class="logo column third"><img src="assets/logo/logo-white.png" alt="everseed logo"></a></li>
                 <li>Features</li>
                 <li>Our Story</li>
                 <li>Climate Change 101</li>
                 <li>Login</li>
+                <li><button class="white-clear" type="button column third">Get Started</button></li>
             </ul>
         </nav>
-        <button class="white-clear" type="button column third">Get Started</button>
     </header>
 
-    <section class="hero-content"> 
+    <section class="hero container"> 
         <h1 class="hero-title-one">Zero Carbon.</h1>
         <h2 class="hero-title-two">Reimagined.</h2>
         <h5 class="hero-body">Introducing a digital solution for a greener planet. Learn new habits and set personalized goals to reduce your carbon footprint.</h5>
+        <button class="blue-solid" type="button">Get Started</button>
+        <button class="white-solid" type="button">Watch Video</button>
     </section>
 
     <section class="steps-content container">
@@ -55,8 +60,8 @@
         </div>
     </section>
     
-    <section class="cta-content">
-        <div class="cta-title">Plant the seeds for a cleaner tomorrow</div>
+    <section class="cta-content container">
+        <div class="section-title">Plant the seeds for a cleaner tomorrow</div>
         <button class="blue-solid" type="button">Get Started for Free!</button>
     </section>
 
