--- a/index.html
+++ b/index.html
@@ -1,101 +1,195 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Everseed</title>
+
+<!-- Basic -->
+    <meta charset="utf-8">
+    <title>Everseed | Reduce Your Carbon Footprint</title>
+
+<!-- Mobile Specific -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Lobster|Poppins" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" type="text/css" href="styles/normalize.css">
+
+<!-- CSS -->
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/skeleton.css">
     <link rel="stylesheet" type="text/css" href="styles/main.css">
-    <link rel="stylesheet" type="text/css" href="styles/navbar.css">
-    <link rel="stylesheet" type="text/css" href="styles/landing.css">
+
+<!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+
+<!-- Favicon -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+
+<!-- 
+    section
+    container
+    row
+    column
+-->
 
 </head>
-<body class="landing">
-
-    <nav class="hover-underline-menu" data-menu-underline-from-center>
-        <ul class="menu align-center">
-            <li><a class="topbar-responsive-logo" href="index.html"><img src="assets/logo/logo-white.png" alt="everseed logo"></a></li>
-            <li><a href="#">Features</a></li>
-            <li><a href="#">Our Story</a></li>
-            <li><a href="#">Climate Change 101</a></li>
-            <li><a href="#">Login</a></li>
-            <li><button type="button" class="button hollow topbar-responsive-button">Get Started</button></li>
-        </ul>
+<body>
+<!-- Menu -->
+    <nav class="topnav section">
+        <div class="container">
+            <div class="row">
+                <div class="one-third column logo" ref="index.html"><img src="assets/logo/everseed-logo.png" alt="everseed logo"></div>
+                <ul class="one-third column">
+                    <li class="item"><a href="#">Features</a></li>
+                    <li class="item"><a href="#">Our Story</a></li>
+                    <li class="item"><a href="#">Climate Change 101</a></li>
+                </ul>
+                <div class="one-third column" href="#"><a class="button" href="#">Get Started</a>
+            </div>
+        </div>
     </nav>
-    <section class="hero container"> 
-        <h1 class="hero-title-one">Zero Carbon.</h1>
-        <h2 class="hero-title-two">Reimagined.</h2>
-        <h5 class="hero-body">Introducing a digital solution for a greener planet. Learn new habits and set personalized goals to reduce your carbon footprint.</h5>
-        <button class="blue-solid" type="button">Get Started</button>
-        <button class="white-solid" type="button">Watch Video</button>
+    <div class="row divider" style="width: 1184px;"></div>
+<!-- Hero -->
+    <section class="hero section">
+        <div class="container">
+            <h1 class="hero-title row">Zero Carbon. <span style="font-family:lobster;letter-spacing: 3px">Reimagined.</span></h1>
+            <p>Introducing a digital solution for a greener planet. Learn new habits and set personalized goals to reduce your carbon footprint.</p>
+            <button class="button-primary" href="#">Get Started</button>
+            <button class="button-secondary" href="#">Watch Video</button>
+        </div>
     </section>
 
-    <section class="steps-content container">
-        <div class="section-title">Start Your Journey to Zero Waste</div>
-
-        <div class="steps column fourth right">
-            <h6 class="step-number">Step 1 - Awareness</h6>
-            <h4 class="step-title">What's your Carbon Score?</h4>
-            <p class="step-description">A carbon score is a unique calculation of carbon emissions based on your daily activities. With the rise of climate change, humans are facing challenges in health, energy, agriculture, and water supply.<br><br>Our goal is to live a low-carbon sustainable lifestyle to ensure a healthy planet.</p>  
-            <button class="green-clear" type="button">Take the Quiz Now!</button>
-        </div>
-        <div class="steps column fourth left">
-            <h6 class="step-number">Step 2 - Education</h6>
-            <h4 class="step-title">Learn new carbon reducing habits</h4>
-            <p class="step-description">Want to learn more ways to reduce your carbon impact? With Everseed, you can search an expansive library of articles, videos, projects, and recipes.</p>
-            <button class="white-clear" type="button">Get Started</button>  
-            <div class="education column third">
-                <div class="box a">GoGreen Library<p>Explore educational videos and articles about green house gases, climate change, carbon footprint, and so much more.</p></div>
-                <div class="box b">Seriously-Sustainable<p>Not sure where to start? Our curated series is a great place for beginnersand kids to learn all about climate change.</p></div>
-                <div class="box c">Food Mantra<p>Low-carbon can be deliciousand substainable! Try seasonal and regionally grown food to reduce your CO2 impact.</p></div>
-                <div class="box d">Voice Your Vote<p>Earth is our shared resource. Voting for policies and laws that hold corporations accountable can help reduce climate change.</p></div>
-                <div class="box e">DIY Corner<p>Do It Yourself “Go Green” projects are a fun way to upcycle items and  save money!</p></div>
-                <div class="box f">The Real Nature Friendly<p>Team up with eco-friendly brandsverified by our experts to ensure you’re really choosing brands with a low carbon impact.</p></div>
-                <div class="box d">Pin It<p>Found something interesting? Bookmark this gem and save it  for a later time. </p></div>
-                <div class="box e">Eco-Tips<p>These weekly tips are an easily way to incorporate new habits into your daily routine.</p></div>
-                <div class="box f">Share is Caring<p>Don’t keep these secrets all to yourself! Share and help educate friends and family too!</p></div>
+<br>
+<br>
+<br>
+<br>
+<!-- Features -->
+    <section class="features section">
+        <div class="container">
+            <h3 class="title">Start Your Journey to Zero Waste</h3> 
+<br>
+<br>
+<br>
+            <div class="row one">
+                <div class="one-half column">Image 1</div>
+                <div class="one-half column step">
+                    <h7 class="step-number">Step 1 - Awareness</h7>
+                    <h5 class="step-title">What's your Carbon Score?</h5>
+                    <p class="step-description">A carbon score is a unique calculation of carbon emissions based on your daily activities. With the rise of climate change, humans are facing challenges in health, energy, agriculture, and water supply.<br><br>Our goal is to live a low-carbon sustainable lifestyle to ensure a healthy planet.</p>
+                    <a class="button-two" href="#">Take The Quiz Now</a>
                 </div>
             </div>
-        <div class="steps column fourth right">
-            <h6 class="step-number">Step 3 - Take Action</h6>
-            <h4 class="step-title">Build custom goals  &amp; track your activities</h4>
-            <p class="step-description">Starting new habits can be hard! We believe that incorporating these activities into your daily life can help you adopt and maintain these habits. Build custom goals that fit your interests and track how much carbon you're reducing!</p>  
-            <button class="green-clear" type="button">Learn More</button>
-        </div>
-        <div class="steps column fourth left">
-            <h6 class="step-number">Step 4 - Connect</h6>
-            <h4 class="step-title">Grow your community</h4>
-            <p class="step-description">Meet other waste free warriors just like you! Challenge and track your friends activities to keep each other CO2 accountable!</p>
-            <button class="white-clear" type="button">Learn More</button>  
+<br>
+<br>
+<br>
+            <div class="row two">
+                <div class="one-half column step">
+                    <h7 class="step-number">Step 2 - Education</h7>
+                    <h5 class="step-title">Learn new carbon reducing habits</h5>
+                    <p class="step-description">Want to learn more ways to reduce your carbon impact? With Everseed, you can search an expansive library of articles, videos, projects, and recipes.</p>
+                    <a class="button" href="#">Get Started</a>
+                </div>
+                <div class="one-half column">Image 2</div>
+            </div>
+<br>
+<br>
+<br>
+            <div class="row three">
+                <div class="one-half column">Image 3</div>
+                <div class="one-half column step">
+                    <h7 class="step-number">Step 3 - Take Action</h7>
+                    <h5 class="step-title">Build custom goals  &amp; track your activities</h5>
+                    <p class="step-description">Starting new habits can be hard! We believe that incorporating these activities into your daily life can help you adopt and maintain these habits. Build custom goals that fit your interests and track how much carbon you're reducing!</p>  
+                    <a class="button-two" href="#">Learn More</a>
+                </div>
+            </div>
+<br>
+<br>
+<br>
+            <div class="row four">
+                <div class="one-half column step">
+                    <h7 class="step-number">Step 4 - Connect</h7>
+                    <h5 class="step-title">Grow your community</h5>
+                    <p class="step-description">Meet other waste free warriors just like you! Challenge and track your friends activities to keep each other CO2 accountable!</p>
+                    <a class="button" href="#">Learn More</a>
+                </div>
+                <div class="one-half column">Image 4</div>
+            </div>
         </div>
     </section>
-    
-    <section class="cta-content container">
-        <div class="section-title">Plant the seeds for a cleaner tomorrow</div>
-        <button class="blue-solid" type="button">Get Started for Free!</button>
+
+<br>
+<br>
+<br>
+<br>
+<!-- Call to Action -->
+    <section class="cta section">
+        <div class="container">
+            <h3 class="title">Plant the seeds for a cleaner tomorrow</h3>
+            <button class="button-primary" href="#">Get Started for Free!</button>
+        </div>
     </section>
-    <footer class="bottomnav container">
-        <a href="index.html" class="logo column third"><img src="assests/logo/logo-white.png" alt="everseed logo"></a>
-        <nav class="navbar column third">
+
+<br>
+<br>
+
+</body>
+
+<footer class="bottomnav section">
+    <div class="container">
+        <a href="index.html" class="three columns logo"><img src="assets/logo/logo-white.png" alt="everseed logo"></a>
+
+        <div class="two columns bottomnav">
             <ul>
                 <li>FAQ</li>
                 <li>Our Story</li>
+            </ul>
+        </div>
+
+        <div class="two columns bottomnav">
+            <ul>
                 <li>Privacy Policy</li>
                 <li>Contact</li>
+            </ul>
+        </div>
+
+        <div class="two columns bottomnav">
+            <ul>
                 <li>Community</li>
                 <li>Terms of Service</li>
-                <li>© 2018. Everseed. All Rights Reserved.</li>
             </ul>
-        </nav>
-        <div class="social column third">
+        </div>
+
+        <div class="three columns social">
             <ul>
-                <a href="index.html" class="icon"><img src="**" alt="facebook"></a>
-                <a href="index.html" class="icon"><img src="**" alt="twitter"></a>
-                <a href="index.html" class="icon"><img src="**" alt="instagram"></a>
+                <i class="fab fa-facebook-f" href="#"></i>
+                <i class="fab fa-twitter" href="#"></i>
+                <i class="fab fa-instagram" href="#"></i>
             </ul>
         </div>  
-    </footer>
+    </div>
+    <hr>
+    <div class="container">
+        <br>
+        <div class="one-third column">   </div>
+        <div class="one-third column copyright">© 2018. Everseed. All Rights Reserved.</div>
+        <div class="one-third column">   </div>
+    </div>
+</footer>
 
-</body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
