Add assets for everseed product showcase

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 
 <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 
 <!-- Favicon -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
@@ -30,121 +29,120 @@
 
 </head>
 <body>
+	<section class="topfold">
 <!-- Menu -->
-    <nav class="topnav section">
-        <div class="container">
-            <div class="row">
-                <div class="one-third column logo" ref="index.html"><img src="assets/logo/everseed-logo.png" alt="everseed logo"></div>
-                <ul class="one-third column">
-                    <li class="item"><a href="#">Features</a></li>
-                    <li class="item"><a href="#">Our Story</a></li>
-                    <li class="item"><a href="#">Climate Change 101</a></li>
-                </ul>
-                <div class="one-third column" href="#"><a class="button" href="#">Get Started</a>
-            </div>
-        </div>
-    </nav>
-    <div class="row divider" style="width: 1184px;"></div>
-<!-- Hero -->
-    <section class="hero section">
-        <div class="container">
-            <h1 class="hero-title row">Zero Carbon. <span style="font-family:lobster;letter-spacing: 3px">Reimagined.</span></h1>
-            <p>Introducing a digital solution for a greener planet. Learn new habits and set personalized goals to reduce your carbon footprint.</p>
+	    <nav class="topnav section">
+	    	<section class="transbox">
+		    	<a href="index.html" class="nav_logo"><img src="assets/logo/everseed-logo.svg" alt="everseed logo">
+		        <a href="#" class="links">Features</a>
+		        <a href="#" class="links">Our Story</a>
+		        <a href="#" class="links">Climate Change 101</a>
+		        <a href="#"><a class="button" href="#">Get Started</a>
+	        </section>
+	    </nav>
+	<!-- Hero -->
+	    <section class="hero section">
+	        <div class="container">
+	            <h1 class="hero-title">Zero Carbon. Reimagined.</h1>
+	            <p>Introducing a digital solution for a greener planet. Learn new habits and set personalized goals to reduce your carbon footprint.</p>
+	        </div>
+        	<br>
             <button class="button-primary" href="#">Get Started</button>
-            <button class="button-secondary" href="#">Watch Video</button>
-        </div>
-    </section>
+            <div class="divider"></div>
+            <button class="button-secondary" href="#"><i class="fas fa-play-circle fa-lg"></i> Watch Video</button>
+            <!-- 
+            <i class="fas fa-play-circle fa-lg"></i>
+			<i class="fas fa-play"></i>
+			<i class="fas fa-play fa-lg"></i>
+            -->
+	    </section>
 
-<br>
-<br>
-<br>
-<br>
+	</section>
 <!-- Features -->
-    <section class="features section">
+
+    <section class="feature_01 section">
+    	<h3 class="title">Start Your Journey to Zero Waste</h3> 
         <div class="container">
-            <h3 class="title">Start Your Journey to Zero Waste</h3> 
-<br>
-<br>
-<br>
-            <div class="row one">
-                <div class="one-half column">Image 1</div>
+            <div class="row feature one">
+                <div class="one-half column">
+                	<img src="assets/features/feature01.png" alt="awareness">
+                </div>
                 <div class="one-half column step">
-                    <h7 class="step-number">Step 1 - Awareness</h7>
+                    <h7 class="step-number"><span style="color: #16756D;font-weight: 400; text-transform: uppercase">Step 1 - Awareness</span></h7>
                     <h5 class="step-title">What's your Carbon Score?</h5>
                     <p class="step-description">A carbon score is a unique calculation of carbon emissions based on your daily activities. With the rise of climate change, humans are facing challenges in health, energy, agriculture, and water supply.<br><br>Our goal is to live a low-carbon sustainable lifestyle to ensure a healthy planet.</p>
                     <a class="button-two" href="#">Take The Quiz Now</a>
                 </div>
             </div>
-<br>
-<br>
-<br>
-            <div class="row two">
+        </div>
+    </section>
+
+    <section class="feature_02 section">
+    	<div class="container">
+            <div class="row feature two">
                 <div class="one-half column step">
-                    <h7 class="step-number">Step 2 - Education</h7>
-                    <h5 class="step-title">Learn new carbon reducing habits</h5>
+                    <h7 class="step-number"><span style="font-weight: 400; text-transform: uppercase">Step 2 - Education</span></h7>
+                    <h5 class="step-title">Learn carbon reducing habits</h5>
                     <p class="step-description">Want to learn more ways to reduce your carbon impact? With Everseed, you can search an expansive library of articles, videos, projects, and recipes.</p>
                     <a class="button" href="#">Get Started</a>
                 </div>
-                <div class="one-half column">Image 2</div>
+                <div class="one-half column">
+                	<img src="assets/features/feature02.png" alt="education">
+                </div>
             </div>
-<br>
-<br>
-<br>
-            <div class="row three">
-                <div class="one-half column">Image 3</div>
+        </div>
+    </section>
+
+    <section class="feature_03 section">
+    	<div class="container">
+            <div class="row feature three">
+                <div class="one-half column">
+                	<img src="assets/features/feature03.png" alt="action">
+                </div>
                 <div class="one-half column step">
-                    <h7 class="step-number">Step 3 - Take Action</h7>
-                    <h5 class="step-title">Build custom goals  &amp; track your activities</h5>
+                    <h7 class="step-number"><span style="color: #16756D;font-weight: 400; text-transform: uppercase">Step 3 - Take Action</span></h7>
+                    <h5 class="step-title">Build custom goals &amp; track activities</h5>
                     <p class="step-description">Starting new habits can be hard! We believe that incorporating these activities into your daily life can help you adopt and maintain these habits. Build custom goals that fit your interests and track how much carbon you're reducing!</p>  
                     <a class="button-two" href="#">Learn More</a>
                 </div>
             </div>
-<br>
-<br>
-<br>
-            <div class="row four">
+        </div>
+    </section>
+
+    <section class="feature_04 section">
+    	<div class="container">
+            <div class="row feature four">
                 <div class="one-half column step">
-                    <h7 class="step-number">Step 4 - Connect</h7>
+                    <h7 class="step-number"><span style="font-weight: 400; text-transform: uppercase">Step 4 - Connect</span></h7>
                     <h5 class="step-title">Grow your community</h5>
                     <p class="step-description">Meet other waste free warriors just like you! Challenge and track your friends activities to keep each other CO2 accountable!</p>
                     <a class="button" href="#">Learn More</a>
                 </div>
-                <div class="one-half column">Image 4</div>
+                <div class="one-half column">
+                	<img src="assets/features/feature04.png" alt="connect">
+                </div>
             </div>
         </div>
     </section>
 
-<br>
-<br>
-<br>
-<br>
 <!-- Call to Action -->
     <section class="cta section">
         <div class="container">
             <h3 class="title">Plant the seeds for a cleaner tomorrow</h3>
+            <br> 
             <button class="button-primary" href="#">Get Started for Free!</button>
         </div>
     </section>
-
-<br>
-<br>
 
 </body>
 
 <footer class="bottomnav section">
     <div class="container">
-        <a href="index.html" class="three columns logo"><img src="assets/logo/logo-white.png" alt="everseed logo"></a>
+        <a href="index.html" class="three columns logo"><img src="assets/logo/everseed-logo.svg" alt="everseed logo"></a>
 
         <div class="two columns bottomnav">
             <ul>
                 <li>FAQ</li>
-                <li>Our Story</li>
-            </ul>
-        </div>
-
-        <div class="two columns bottomnav">
-            <ul>
-                <li>Privacy Policy</li>
                 <li>Contact</li>
             </ul>
         </div>
@@ -152,24 +150,28 @@
         <div class="two columns bottomnav">
             <ul>
                 <li>Community</li>
-                <li>Terms of Service</li>
+                <li>Privacy Policy</li>
+            </ul>
+        </div>
+
+        <div class="two columns bottomnav">
+            <ul>
+                <li>Our Story</li>
+                <li>Terms</li>
             </ul>
         </div>
 
         <div class="three columns social">
             <ul>
-                <i class="fab fa-facebook-f" href="#"></i>
-                <i class="fab fa-twitter" href="#"></i>
-                <i class="fab fa-instagram" href="#"></i>
+                <i class="fab fa-facebook-f fa-lg" href="#"></i>
+                <i class="fab fa-twitter fa-lg" href="#"></i>
+                <i class="fab fa-instagram fa-lg" href="#"></i>
             </ul>
         </div>  
     </div>
     <hr>
     <div class="container">
-        <br>
-        <div class="one-third column">   </div>
-        <div class="one-third column copyright">© 2018. Everseed. All Rights Reserved.</div>
-        <div class="one-third column">   </div>
+        <div class="copyright">© 2018 Everseed All Rights Reserved.</div>
     </div>
 </footer>
 
